[workspace]
members = [
    "echo-async",
    "echo-async-tls",
    "echo-sync",
    "hash-service",
    "pool",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls", branch = "raoul/tokio-1.15.0" }
mio = { git = "https://github.com/mzohreva/mio", branch = "mz/sgx-port-0.7.6" }
tokio = { git = "https://github.com/fortanix/tokio.git", branch = "raoul/tokio-1.15.0-sgx" }
