[package]
name = "echo-async-tls"
version = "0.1.0"
authors = ["Mohsen Zohrevandi <mohsen.zohrevandi@fortanix.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
chrono = "0.4"
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "http2", "server", "stream"] }
mbedtls = { version = "0.7", features = ["rdrand", "std", "threading", "tokio"] }
once_cell = "1.5.2"
pool = { path = "../pool" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.15.0", features = ["net", "io-util", "sync", "rt", "rt-multi-thread"] }

[package.metadata.fortanix-sgx]
threads=16
heap-size=0x60000000
stack-size=0x40000
