[package]
name = "echo-async"
version = "0.1.0"
authors = ["Mohsen Zohrevandi <mohsen.zohrevandi@fortanix.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
hex = "0.4"
http = "0.2"
hyper = { version = "0.13", default-features = false }
once_cell = "1.5.2"
pool = { path = "../pool" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=0.3.4", features = ["net", "io-util", "sync", "rt", "rt-multi-thread"] }
tokio-compat-02 = "0.1.2"

[package.metadata.fortanix-sgx]
threads=16
heap-size=0x60000000
stack-size=0x40000
