[package]
name = "echo-sync"
version = "0.1.0"
authors = ["Mohsen Zohrevandi <mohsen.zohrevandi@fortanix.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
hex = "0.4"
hyper = { version = "0.10", default-features = false }
once_cell = "1.5.2"
pool = { path = "../pool" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.fortanix-sgx]
threads=10002
heap-size=0x60000000
stack-size=0x40000
